# proxide

./: .gitignore  Cargo.toml  README.md  config.sample.yml  config.schema.json  dev-dependencies.sh  justfile  rustfmt.toml  wrk.json.lua
.cargo/: config.toml
.github/workflows/: build.yml  coverage.yml  integration-tests.yml  release.yml  unit-tests.yml
cert/: README.md  self-signed-cert.pem  self-signed-key.pem
patches/: config.schema.json
patches/h3/src/: stream.rs
patches/schemars/schemars/src/: flatten.rs
patches/schemars/schemars/src/json_schema_impls/: atomic.rs  mod.rs
patches/schemars/schemars_derive/src/ast/: mod.rs
src/lib/: backoff.rs  ketama.rs  lang.rs  mod.rs  once.rs  proctitle.rs  util.rs
src/lib/body/: mod.rs
src/lib/body/h3/: mod.rs  quinn.rs
src/lib/channel/: mod.rs  spsc.rs
src/lib/cli/: args.rs  mod.rs
src/lib/cli/cmd/: create_config.rs  create_config_schema.rs  mod.rs  signal.rs  start.rs
src/lib/client/: mod.rs  pool.rs  upstream_pool.rs
src/lib/compression/: mod.rs
src/lib/config/: listen.rs  matcher.rs  mod.rs  regex.rs  server_name.rs
src/lib/context/: mod.rs
src/lib/graceful/: mod.rs
src/lib/interpolate/: mod.rs
src/lib/io/: mod.rs  pre_buf_reader.rs
src/lib/log/: display.rs  level.rs  logfile.rs  logger.rs  mod.rs
src/lib/net/: mod.rs  timeout.rs
src/lib/proxy/: balance.rs  context.rs  error.rs  header.rs  health.rs  mod.rs  service.rs  stream.rs  util.rs
src/lib/proxy_protocol/: mod.rs
src/lib/serde/: content_type.rs  duration.rs  header_name.rs  header_value.rs  mod.rs  sni.rs  status_code.rs  url.rs
src/lib/serve/: mod.rs
src/lib/serve_static/: mod.rs
src/lib/service/: mod.rs
src/lib/stats/: counters_io.rs  mod.rs
src/lib/tls/: cert_resolver.rs  danger_no_cert_verifier.rs  mod.rs
src/lib/upgrade/: mod.rs
tests/: access-client-log.rs  access-client-log.yml  addr-ipv4-ipv6.rs  addr-ipv4-ipv6.yml  balance-ip-hash.rs  balance-ip-hash.yml  balance-least-connections-with-weight.rs  balance-least-connections-with-weight.yml  balance-least-connections.rs  balance-least-connections.yml  balance-random.rs  balance-random.yml  balance-round-robin.rs  balance-round-robin.yml  base-url-path.rs  base-url-path.yml  basic-auth.rs  basic-auth.yml  cert-resolution.rs  cert-resolution.yml  chdir.rs  chdir.yml  cmd-args.rs  cmd-args.yml  cmd-signal-no-pid-err.rs  cmd-signal-no-pid-err.yml  cmd-signal.rs  cmd-signal.yml  cmd.rs  cmd.yml  compression.rs  compression.yml  config-limits.rs  config-limits.yml  counters-io.rs  counters-io.yml  graceful-shutdown-timeout.rs  graceful-shutdown-timeout.yml  graceful-shutdown.rs  graceful-shutdown.yml  (+52 more)
tests/common/: mod.rs
tests/static/: .dotfile.txt  symlink-dir  symlink-file.txt
tests/static/dir/: .dotfile.txt  index.html  symlink-index.html
tests/static/dir2/: index.txt
tests/static/symlink-index/: index.html
